--- a/docs/releases/v1-11.md
+++ b/docs/releases/v1-11.md
@@ -6,6 +6,8 @@ This is a software upgrade proposal for Injective. If passed, this proposal woul
 
 Validators can find a step-by-step guide on the upgrade procedure in the long-form [proposal](https://github.com/InjectiveLabs/injective-chain-releases/blob/master/docs/migration/injective-canonical-chain-11.md).
 
+Note: Keyring is migrated from amino to protobuf, it's recommended you backup your keyring before applying the new application binary. For more details, refer here: https://github.com/cosmos/cosmos-sdk/pull/9695
+
 ## Breaking Changes
 - Clients utilizing simulation along with a buffer should increase the buffer from 20k to 25-30k as gas consumption will be increased. Clients specifying explicit gas limit should use simulation to find the appropriate value for their use-case when the upgrade occurs or deploy their applications on testnet which has already been upgraded and empirically find the gas difference.
 - Events in CometBFT are represented in strings and are not base64-encoded as previously. If you’re using raw events in your application opposed to exposed API’s, we recommend deploying your applications on testnet and migrate to the new scheme.
