--- a/docs/releases/v1-11.md
+++ b/docs/releases/v1-11.md
@@ -12,7 +12,7 @@ Note: Keyring is migrated from amino to protobuf, it's recommended you backup yo
 - Clients utilizing simulation along with a buffer should increase the buffer from 20k to 25-30k as gas consumption will be increased. Clients specifying explicit gas limit should use simulation to find the appropriate value for their use-case when the upgrade occurs or deploy their applications on testnet which has already been upgraded and empirically find the gas difference.
 - Events in CometBFT are represented in strings and are not base64-encoded as previously. If you’re using raw events in your application opposed to exposed API’s, we recommend deploying your applications on testnet and migrate to the new scheme.
 - Node Operators & IBC Relayers
-    - Node operators must remove the wasm cache before resuming with the new application binary. Refer [here](https://github.com/CosmWasm/wasmvm/issues/426) for more details).
+    - Node operators must remove the wasm cache before resuming with the new application binary. Refer [here](https://github.com/CosmWasm/wasmvm/issues/426) for more details.
     - The new application binary requires Go version 1.19 opposed to 1.18. Node operators building from source must update the version before resuming with the new application binary.
     - The libwasmvm library has been changed from v1.1.1 to v1.2.3. Node operators must copy the new library provided in the official release before resuming with the new application binary.
     - IBC relayers should update hermes to v1.5.0 which has support for CometBFT.
