--- a/docs/releases/v1-11.md
+++ b/docs/releases/v1-11.md
@@ -30,6 +30,7 @@ Note: Keyring is migrated from amino to protobuf, it's recommended you backup yo
 - Miscellaneous:
     - Emit events for contract executions in BeginBlocker
     - Emit events when a validator is slashed
+    - Set min commission for all validators below 5% to 5%
     - Modify oracle price query
     - Add query to retrieve orders by account address
     - Return TOB & mid price for a market in the DerivativeMarkets and SpotMarkets queries
